--- a/ShopTree/Views/Shared/_Layout.cshtml
+++ b/ShopTree/Views/Shared/_Layout.cshtml
@@ -298,7 +298,7 @@
                                         <span>Danh mục sản phẩm</span>
                                     </div>
                                     <div id="menuverti" class="block_content navbar_menuvertical">
-                                        @{Html.RenderAction("Categories", "Home"); }
+                                        @{Html.RenderAction("Categories", "Home", new { area = "" }); }
                                     </div>
                                 </div>
                             </div>
