--- a/ShopTree/Views/Shared/_ShowOrderDetail.cshtml
+++ b/ShopTree/Views/Shared/_ShowOrderDetail.cshtml
@@ -13,7 +13,7 @@
         </td>
         <td>@item.Price</td>
         <td>@item.Quantity</td>
-        <td>@subTotal.Value.ToString("C", CultureInfo.GetCultureInfo("vi-VN"))</td>
+        <td>@subTotal.ToString("C", CultureInfo.GetCultureInfo("vi-VN"))</td>
     </tr>
     }
 
