--- a/ShopTree/Views/ShoppingCart/CheckOrderWithoutLogin.cshtml
+++ b/ShopTree/Views/ShoppingCart/CheckOrderWithoutLogin.cshtml
@@ -71,22 +71,22 @@
 
                                             <tr>
                                                 <td class="border-right" colspan="3">
-                                                    @if (Model.ShippingName != null)
+                                                    @if (Model.DeliveryName != null)
                                                     {
                                                         <div class="box-customer-content">
-                                                            <div class="title docs"><span>Thông tin giao hàng</span></div>
-                                                            <div>[Anh/Chị] :<b>@Model.ShippingName</b></div>
+                                                            <div class="title docs"><span>Người nhận hàng</span></div>
+                                                            <div>[Anh/Chị] :<b>@Model.DeliveryName</b></div>
                                                             <div>
-                                                                <span>@Model.ShippingEmail</span> |<br />
-                                                                <span>@Model.ShippingAddress</span> | <br />
-                                                                <span>@Model.ShippingPhone</span>
+                                                                <span>@Model.DeliveryEmail</span> |<br />
+                                                                <span>@Model.DeliveryAddress</span> | <br />
+                                                                <span>@Model.DeliveryPhone</span>
                                                             </div>
                                                         </div>
                                                     }
                                                     else
                                                     {
                                                         <div class="box-customer-content">
-                                                            <div class="title"><span>Thông tin thanh toán</span></div>
+                                                            <div class="title"><span>Người nhận hàng</span></div>
                                                             <div>[Anh/Chị] :<b>@Model.CustomerName</b></div>
                                                             <div>
                                                                 <span>@Model.CustomerEmail</span> |<br />
@@ -96,7 +96,7 @@
                                                         </div>
                                                     }
                                                     <div class="box-customer-content">
-                                                        <div class="title"><span>Thông tin thanh toán</span></div>
+                                                        <div class="title"><span>Người thanh toán</span></div>
                                                         <div>[Anh/Chị] :<b>@Model.CustomerName</b></div>
                                                         <div>
                                                             <span>@Model.CustomerEmail</span> |<br />
