--- a/ShopTree/Assets/admin/css/style.css
+++ b/ShopTree/Assets/admin/css/style.css
@@ -14021,6 +14021,25 @@ hr.transparent {
     border: 1px solid #636e72;
     border-radius: 50%;
 }
+.custom-table thead {
+    background: #44b4eb;
+    color : white;
+}
+.row-total {
+    width: 100%;
+    padding: 0.375rem 0;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #ff0000;
+}
+.box-customer-content .title {
+    margin: 10px 0;
+    color: #44b4eb;
+    font-weight : bold;
+}
+    .box-customer-content .title span {
+        border-bottom: 1px solid #44b4eb;
+    }
 @keyframes greeting-text-animation {
     0% {
         letter-spacing: 5px;
