--- a/ShopTree/Areas/Admin/Views/Orders/ListOutstandingOrder.cshtml
+++ b/ShopTree/Areas/Admin/Views/Orders/ListOutstandingOrder.cshtml
@@ -12,7 +12,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item">Home</li>
         <li class="breadcrumb-item">Admin</li>
-        <li class="breadcrumb-item active"><a href="@Url.Action("AllOrder", "Orders", new { area = "Admin" })">@ViewBag.Title</a></li>
+        <li class="breadcrumb-item active"><a href="@Url.Action("ListOutstandingOrder", "Orders", new { area = "Admin" })">@ViewBag.Title</a></li>
     </ol>
 
     <div class="container-fluid">
@@ -89,7 +89,7 @@
                                         <div>
                                             Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
                                             <span>
-                                                @Html.PagedListPager(Model, page => Url.Action("AllOrder", "Orders", new { page, area = "Admin" }))
+                                                @Html.PagedListPager(Model, page => Url.Action("ListOutstandingOrder", "Orders", new { page, area = "Admin" }))
                                             </span>
 
                                         </div>
