--- a/ShopTree/Areas/Admin/Views/Orders/ListProcessedOrder.cshtml
+++ b/ShopTree/Areas/Admin/Views/Orders/ListProcessedOrder.cshtml
@@ -1,6 +1,5 @@
 ﻿@using PagedList.Mvc
 @using System.Globalization
-@using ShopTree.Common
 @model PagedList.IPagedList<ShopTree.Models.Order>
 @{
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -12,7 +11,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item">Home</li>
         <li class="breadcrumb-item">Admin</li>
-        <li class="breadcrumb-item active"><a href="@Url.Action("AllOrder", "Orders", new { area = "Admin" })">@ViewBag.Title</a></li>
+        <li class="breadcrumb-item active"><a href="@Url.Action("ListProcessedOrder", "Orders", new { area = "Admin" })">@ViewBag.Title</a></li>
     </ol>
 
     <div class="container-fluid">
@@ -55,21 +54,10 @@
                                             <td>@item.Total.ToString("C", CultureInfo.GetCultureInfo("vi-VN"))</td>
                                             <td>@(item.CancelReason != null ? (item.CancelReason.Substring(0, 10) + "...") : item.CancelReason)</td>
                                             <td class="td-contain-button">
-                                                <a class="custom-btn custom-btn-warning" href="@Url.Action("Detail", "Orders", new { area = "Admin", orderId = item.Id, page = Model.PageNumber })">
+                                                <a class="custom-btn custom-btn-warning" href="@Url.Action("Detail", "Orders", new { area = "Admin", orderId = item.Id, page = Model.PageNumber})">
                                                     <i class="fa fa-check-square-o"></i>
                                                     Chi tiết đơn hàng
                                                 </a>
-                                                @if (User.IsInRole("Employee"))
-                                                {
-                                                    if (item.OrderStatusId == (int)Constants.ORDER_STATUS.WAITING)
-                                                    {
-                                                        <a class="custom-btn custom-btn-success" href="@Url.Action("ProcessOrder", "Orders", new { area = "Admin", orderId = item.Id, page = Model.PageNumber})">
-                                                            <i class="fa fa-arrow-circle-o-right"></i>
-                                                            Xử lý
-                                                        </a>
-                                                    }
-                                                }
-
                                                 @if (User.IsInRole("Admin"))
                                                 {
                                                     <a class="custom-btn custom-btn-remove" data-toggle="modal" data-target="#confirm-delete" data-page-index="@Model.PageNumber" data-page="Product" data-id="@item.Id" data-prop-name="@item.OrderCode">
@@ -89,7 +77,7 @@
                                         <div>
                                             Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
                                             <span>
-                                                @Html.PagedListPager(Model, page => Url.Action("AllOrder", "Orders", new { page, area = "Admin" }))
+                                                @Html.PagedListPager(Model, page => Url.Action("ListProcessedOrder", "Orders", new { page, area = "Admin" }))
                                             </span>
 
                                         </div>
