minus product when checkout success

--- a/ShopTree/Views/Customers/ChangePassword.cshtml
+++ b/ShopTree/Views/Customers/ChangePassword.cshtml
@@ -11,6 +11,7 @@
                     <ul>
                         <li><a href="@Url.Action("CustomerProfile", "Customers")"><i class="glyphicon glyphicon-user"></i> Thông tin tài khoản</a></li>
                         <li><a href="@Url.Action("CheckOrder", "ShoppingCart")"><i class="glyphicon glyphicon-list-alt"></i> Đơn hàng của tôi</a></li>
+                        <li><a href="@Url.Action("AttendProduct", "Customers")"><i class="fa fa-tree"></i> Chăm sóc cây</a></li>
                         <li class="active"><a href="javascript:void(0)"><i class="fa fa-key"></i> Thay đổi mật khẩu</a></li>
                         <li><a href="@Url.Action("Logout", "Customers")"><i class="glyphicon glyphicon-log-out"></i> Thoát</a></li>
                     </ul>
