--- a/ShopTree/Views/Shared/_Layout.cshtml
+++ b/ShopTree/Views/Shared/_Layout.cshtml
@@ -200,7 +200,7 @@
                                             <div class="user_box">
                                                 <ul>
                                                     <li><a href="@Url.Action("CustomerProfile", "Customers")">Thông tin cá nhân</a></li>
-                                                    <li><a href="#">Hướng dẫn chăm sóc cây</a></li>
+                                                    <li><a href="@Url.Action("AttendProduct", "Customers")">Hướng dẫn chăm sóc cây</a></li>
                                                     <li><a href="@Url.Action("Logout", "Customers")">Đăng xuất</a></li>
                                                 </ul>
                                             </div>
