--- a/ShopTree/Views/ShoppingCart/CheckOrderWithoutLogin.cshtml
+++ b/ShopTree/Views/ShoppingCart/CheckOrderWithoutLogin.cshtml
@@ -40,7 +40,7 @@
                                     <b>@Model.OrderCode</b> lúc
                                     <span class="grey">@Model.OrderDate.ToLongDateString()</span>
                                 </div>
-                                <div class="table-responsive clearfix order-tracking-info">
+                                <div class="clearfix order-tracking-info">
                                     <table class="table table-mycart">
                                         <thead>
                                             <tr>
