--- a/ShopTree/Views/ShoppingCart/ViewOrderDetail.cshtml
+++ b/ShopTree/Views/ShoppingCart/ViewOrderDetail.cshtml
@@ -38,7 +38,7 @@
                             <b>@Model.OrderCode</b> lúc
                             <span class="grey">@Model.OrderDate.ToLongDateString()</span>
                         </div>
-                        <div class="table-responsive clearfix myorder-info">
+                        <div class="clearfix myorder-info">
                             <table class="table table-mycart">
                                 <thead>
                                     <tr>
