add field in Property class Model.

--- a/ShopTree/Views/Home/Index.cshtml
+++ b/ShopTree/Views/Home/Index.cshtml
@@ -86,18 +86,16 @@
                 <div class="box-adv">
                     <div class="sidebar_banner">
                         <div class="img_banner">
-                            <a href="#">
-                                <img src="~/Assets/client/images/banner/banner-4.jpg" class="img-responsive lazy">
-                                <div class="figcaption"></div>
+                            <a href="javascript:void(0)">
+                                <img src="~/Assets/client/images/banner/banner-4.jpg" class="img-responsive lazy">                               
                             </a>
                         </div>
                     </div>
 
                     <div class="sidebar_banner">
                         <div class="img_banner">
-                            <a href="#">
-                                <img src="~/Assets/client/images/banner/banner-grass.jpg" class="img-responsive lazy">
-                                <div class="figcaption"></div>
+                            <a href="javascript:void(0)">
+                                <img src="~/Assets/client/images/banner/banner-grass.jpg" class="img-responsive lazy">                               
                             </a>
                         </div>
                     </div>
